@@ -15,18 +15,18 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA1
 
 SHA1 eddb7047c79938e9a1ff11cd6df7e4c52a680661 Build.PL
-SHA1 23cb1e940bf21223cc89e0a5843e2f45ff32f695 ChangeLog
+SHA1 cfe92d74900a7e6dcc9b64d7ca035108b4350c7d ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 b60e58dabe06df867326f357a6d73f197d15daab MANIFEST
-SHA1 04467bf727e3b34726169419c4660970456dd3bb META.yml
+SHA1 6ac1eb042805d66c773b42a4da1b093c1b56e8a9 META.yml
 SHA1 f66acde86158aa6f0acaea3454b97faeedd21d74 Makefile.PL
 SHA1 46b0a200babcf01cc6d2138fb294e020238c8430 README
-SHA1 f218b4b53533fdfe8c6c790dc5e5db7b9fbb03dc lib/Term/Menus.pm
+SHA1 507bc4a447e1a8c0d9a5613e089ddc7a0dd75f8d lib/Term/Menus.pm
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.1 (Cygwin)
 
-iD8DBQFEzgEsm9P/2BC89ZsRAk7DAJ9MHg8hcoX8raAOkZbKeWw9X1sFDACfXiLb
-toEhyLTdZDVjAJXQZl7dnLw=
-=j9aK
+iD8DBQFE4jPUm9P/2BC89ZsRApVXAJ9opF7qyIX+blmsidjlzEtdcNyTvgCeJ0Sf
+ArdSc3wy9C5hHS5SHaBKMgY=
+=eYb6
 -----END PGP SIGNATURE-----
