@@ -1,3 +1,9 @@
+2006-08-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 1.17 released.
+
+        * Fixed sub menus when the ]Convey[ macro is not set
+
 2006-07-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 1.16 released.
